      be changed too, easily
    - improve the cronjob that generates these to the correct format
  * index.php:
    - improve random artist/album/song support
    - drop the ratings support; don't really have a good, persistent place
      to store this
  * debian/cron.hourly, index.php:
    - fix image loading
    - improve performance
    - cache image list too

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 12 Mar 2011 05:55:54 +0000

musica (2.15-0ubuntu1) natty; urgency=low

  [ Jeff Lane ]
  * README: fix path, LP: #733659

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 12 Mar 2011 05:55:51 +0000

musica (2.14-0ubuntu1) natty; urgency=low

  * debian/links, index.php, jplayer.php: rename "icons" directory to "silk",
    gives some credit to the silk project and some apache2 deployments
    include an alias for the "icons" directory which breaks musica's
    icons; "silk" should be less commonly used as an alias

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 02 Feb 2011 09:36:14 -0800

musica (2.13-0ubuntu1) natty; urgency=low

  * index.php:
    - fix popout icon reference
    - rtrim whitespace on stats
  * index.php, jplayer.php:
    - fix download of ogg files (streaming of ogg not working yet)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 04 Jan 2011 21:17:05 -0600

musica (2.12-0ubuntu1) natty; urgency=low

  * debian/control, debian/dirs, debian/links, debian/rules,
    jplayer/js/Jplayer.as, jplayer/js/jquery.jplayer.min.js,
    jplayer/js/jquery.min.js, jplayer.php, === removed directory
    jplayer/js: use jplayer and jquery from the archive, rather than
    the ones embedded here

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 04 Jan 2011 17:29:56 -0600

musica (2.11-0ubuntu1) natty; urgency=low

  * book_open.png, cd.png, control_play_blue.png, debian/control,
    debian/copyright, debian/install, debian/links, disk.png, group.png,
    index.php, jplayer.php, musica_screenshot.png, music.png, popout.png,
    star_off.png, star_on.png: